<resources>
    <string name="app_name">DTCloud3(Unbind) Demo</string>
    
    <string name="device_connection">设备联网</string>
    <string name="connection_step">联网步骤</string>
    <string name="connection_step_one">1.将手机连接到路由WiFi</string>
    <string name="connection_step_two">2.开启设备的联网模式并点击下一步(如设备</string>
    <string name="connection_step_three">已联网请直接点击配对已联网设备)</string>
    <string name="wifi_checked">请将手机连接到WiFi</string>
     <string name="wifi_tip">请确认设备要接入的WiFi并填写密码</string>
    <string name="wifi_ssid">WiFi名称:</string>
    <string name="wifi_module">WiFi模块:</string>
    <string name="show_password">显示密码</string>
    <string name="password">密码(Password)</string>
    <string name="remember_password">记住密码</string>
    <string name="next">下一步</string>
    <string name="forward">上一步</string>
    <string name="connect_device">连接设备</string>
    <string name="search_device">搜索设备</string>
    <string name="open_wifi">打开WiFi</string>
    <string name="device_connecting_wait">设备正在连接路由器，请稍后...</string>
    <string name="reconnected">重试</string>
    
    <string name="connected_fail">呜呜~~连接失败了哦!</string>
    <string name="fail_reason">可能的失败原因:</string>
    <string name="fail_reason1">1.WiFi密码输入错误</string>
    <string name="fail_reason2">2.设备没有进入配对模式</string>
    <string name="fail_reason3">3.WiFi信号太弱</string>
    <string name="fail_reason4">4.请重启路由器重试</string>
    <string name="back">返回</string>
    
    <string name="device_control">设备控制</string>

    
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="find_password">找回密码</string>
    <string name="input_username_please">请输入用户名(6-20个字符)</string>
    <string name="input_password_please">请输入密码(长度6-20)</string>
    <string name="input_wifi_password_please">请输入WiFi密码</string>
    <string name="input_wifi_name_please">请输入WiFi名称</string>
    <string name="password_format_incorrect">密码格式不正确,请输入6-20个字符(0~9,a~z,_@.)</string>
    <string name="six_captcha">6位验证码</string>
    <string name="get_captcha">获取验证码</string>
    <string name="get_again">重新获取</string>
    <string name="input_phone_please">请输入手机号或邮箱</string>
    <string name="input_captcha_please">请输入验证码</string>
    <string name="login_bt">登&#160;录</string>
    <string name="or">或者</string>
    <string name="no_account_yet">还没有账户?&#160;</string>
    <string name="register_immediately">立即注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="reset_password">重置密码</string>
    <string name="register_bt">注&#160;册</string>
    <string name="register_describe">注册即表示同意电陶思创</string>
    <string name="user_agreement">《用户协议》</string>
    <string name="login_failed">登录失败</string>
    <string name="password_incorrect">密码不正确</string>
    <string name="user_non_existent">用户不存在</string>
    <string name="user_name_format_incorrect">用户名格式不正确,请输入6-20个字符</string>
    <string name="register_failed">注册失败</string>
    <string name="user_name_existent">用户名已存在</string>
    <string name="input_correct_phone">请输入正确的手机号或邮箱</string>
    <string name="phone_existent">抱歉，该号已被注册过</string>
    <string name="captcha_not_existent">验证码不存在，请重新获取验证码</string>
    <string name="captcha_invalid">验证码已过期，请重新获取验证码</string>
    <string name="captcha_get_failed">验证码获取失败</string>
    <string name="quit_login">退出登录</string>
    <string name="device_list">设备列表</string>
    <string name="check_update">检查更新</string>
    <string name="clean_cache">清理缓存</string>
    <string name="text_user_agreement">用户协议</string>

    <string name="dialog_button_ok">确定</string>
    <string name="dialog_button_cancel">取消</string>
    <string name="add_device">添加设备</string>
    <string name="select_device_type">选择设备类型</string>
    <string name="change_device_name">修改设备名称</string>
    <string name="input_device_name_please">请输入设备名称</string>
    <string name="binding_failed">绑定失败</string>
    <string name="binding_successful">绑定成功</string>
    <string name="remove_binding_failed">解除绑定失败</string>
    <string name="remove_binding_successful">解除绑定成功</string>
    <string name="remote_failed">远程失败</string>
    <string name="delete_device_fip">删除设备后，您将不能再对此设备进行管理。</string>
    
    <string name="update">更新</string>
    <string name="update_tip">发现新的版本,是否需要立即下载更新?</string>
    <string name="update_tip_need">请更新新版本，旧版本已无法再使用！</string>
    <string name="is_the_latest_version">已是最新版本</string>
    <string name="discover_new_version">发现新版本</string>
    <string name="downloading">正在下载</string>
    
    <string name="no_devices">您还没设备哦，请添加设备</string>
    <string name="submit">提交</string>
    <string name="loading">正在加载...</string>
    
    <string name="bind">绑定</string>
    <string name="device_bind">设备绑定</string>
    <string name="remove_bind">解除绑定</string>
    <string name="account_manager">账号管理</string>
    <string name="delete_account_fip">删除账号后，该账号将不能再对设备进行管理。</string>
    <string name="firmware_upgrade">固件升级</string>

    <string name="account_no_access">该账号没有权限</string>
    
    <string name="device_searching">正在搜索设备...</string>
    
    <string name="forget_password_tip">你可通过短信验证码进行密码设置</string>
    <string name="input_register_phone_please">请确认输入注册手机号</string>
    <string name="find_password_success_to_login">密码找回成功，可以登录啦</string>
    <string name="find_password_success">密码找回成功</string>
    
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <string name="downloading_new_version">正在下载新版本...</string>
    <string name="downloading_new_firmware">正在下载新固件...</string>
    <string name="download">下载</string>
    <string name="input_product_type_please">请输入产品类型</string>
    <string name="input_product_name_please">请输入产品名称</string>
    <string name="scan">扫描</string>
    <string name="lan_device_list">网内设备列表</string>
    <string name="no_devices_in_lan">网内没有设备</string>
    <string name="mac_label">MAC:</string>
    <string name="product_id_label">Product ID:</string>
    <string name="shui_sheng_reset_filter">重置</string>

</resources>
