<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:background="@drawable/title_bg">
    
	  <!-- 标题栏 -->
    <RelativeLayout android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_default_height"
        android:background="@drawable/title_bg">
        <TextView android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text=""
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
        <LinearLayout android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/selector_title_back"
	            android:duplicateParentState="true"/>
            <TextView android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/device_connection"
	            android:textColor="@color/selector_title_bar_menu_text"
	            android:duplicateParentState="true"
	            android:textSize="18sp"/>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="#f5f5f5">
        <ImageView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="79dp"
            android:layout_gravity="center"
            android:src="@drawable/icon_failure"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="62dp"
            android:layout_gravity="center_horizontal"
            android:text="失败了!"
            android:textColor="@color/deep_gray"
            android:textSize="26sp" />

        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="37dp"
            android:layout_marginRight="37dp"
            android:orientation="vertical">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fail_reason"
                android:textColor="@color/deep_gray"
                android:textSize="14sp"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fail_reason1"
                android:textColor="@color/deep_gray"
                android:textSize="14sp"
                android:layout_marginTop="5dip"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fail_reason2"
                android:textColor="@color/deep_gray"
                android:textSize="14sp"
                android:layout_marginTop="5dip"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fail_reason3"
                android:textColor="@color/deep_gray"
                android:textSize="14sp"
                android:layout_marginTop="5dip"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fail_reason4"
                android:textColor="@color/deep_gray"
                android:textSize="14sp"
                android:layout_marginTop="5dip"/>
        </LinearLayout>

        <RelativeLayout android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <Button android:id="@+id/bt_reconnected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="33dip"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/reconnected"
                android:textColor="#317ff5"
                android:background="@drawable/selector_btn_retry_bg"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>