<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="false"
    android:orientation="vertical"
	android:background="@drawable/title_bg">
    
	  <!-- 标题栏 -->
    <RelativeLayout android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_default_height"
        android:background="@drawable/title_bg">
        <TextView android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text=""
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
        <LinearLayout android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/selector_title_back"
	            android:duplicateParentState="true"/>
            <TextView android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/device_connection"
	            android:textColor="@color/selector_title_bar_menu_text"
	            android:duplicateParentState="true"
	            android:textSize="18sp"/>
        </LinearLayout>
    </RelativeLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:background="#f5f5f5">
		<LinearLayout android:id="@+id/ll_ssid_passwd"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="14dip"
			android:layout_marginRight="14dip"
			android:orientation="vertical">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="25dip"
				android:text="@string/wifi_tip"
				android:textSize="14sp"
				android:textColor="#969696"/>
			<LinearLayout android:id="@+id/wifi_module_root"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingTop="15dp"
				android:paddingBottom="15dp"
				android:layout_marginTop="10dip"
				android:orientation="horizontal">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="7dip"
					android:layout_marginRight="7dip"
					android:text="@string/wifi_module"
					android:textSize="16sp"
					android:textColor="#969696"/>
				<TextView android:id="@+id/module_name"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="7dip"
					android:layout_marginRight="7dip"
					android:textColor="#656565"
					android:textSize="16sp"
					android:textStyle="bold"/>
			</LinearLayout>
			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="6dip"
				android:layout_marginBottom="25dp"
				android:orientation="horizontal">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="7dip"
					android:layout_marginRight="7dip"
					android:text="@string/wifi_ssid"
					android:textSize="16sp"
					android:textColor="#969696"/>
				<TextView android:id="@+id/et_wifi_ssid"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="7dip"
					android:layout_marginRight="7dip"
					android:textColor="#656565"
					android:textSize="16sp"
					android:textStyle="bold"/>
			</LinearLayout>

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="6dip"
				android:layout_marginRight="6dip"
				android:background="@null"
				android:gravity="center_vertical"
				android:orientation="horizontal">
				<EditText android:id="@+id/et_password"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1.0"
					android:paddingTop="15dp"
					android:paddingBottom="7dp"
					android:paddingLeft="7dp"
					android:gravity="center_vertical"
					android:focusable="true"
					android:background="@null"
					android:hint="@string/input_wifi_password_please"
					android:textColorHint="#969696"
					android:singleLine="true"
					android:textSize="16sp"
					android:password="true"/>
				<ImageView android:id="@+id/show_password"
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:paddingTop="15dp"
					android:paddingLeft="10dp"
					android:paddingRight="8dp"
					android:src="@drawable/icon_eyes_close"/>
			</LinearLayout>

			<View android:layout_width="fill_parent"
				android:layout_height="2px"
				android:layout_marginLeft="6dip"
				android:layout_marginRight="6dip"
				android:layout_marginBottom="25dp"
				android:background="#c4c4c4"/>

			<EditText android:id="@+id/et_product_type"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="6dip"
				android:background="@null"
				android:hint="@string/input_product_type_please"
				android:inputType="number"
				android:textColorHint="#969696"
				android:singleLine="true"
				android:textSize="16sp"/>

			<View android:layout_width="fill_parent"
				android:layout_height="2px"
				android:layout_marginLeft="6dip"
				android:layout_marginRight="6dip"
				android:layout_marginBottom="25dp"
				android:background="#c4c4c4"/>

			<EditText android:id="@+id/et_product_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="6dip"
				android:background="@null"
				android:hint="@string/input_product_name_please"
				android:textColorHint="#969696"
				android:singleLine="true"
				android:textSize="16sp"/>

			<View android:layout_width="fill_parent"
				android:layout_height="2px"
				android:layout_marginLeft="6dip"
				android:layout_marginRight="6dip"
				android:layout_marginBottom="25dp"
				android:background="#c4c4c4"/>
		</LinearLayout>

		<LinearLayout android:id="@+id/ll_wifi_not"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1.0"
			android:layout_marginLeft="30dip"
			android:layout_marginRight="30dip"
			android:orientation="vertical"
			android:visibility="gone"
			android:gravity="center">
			<ImageView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:src="@drawable/icon_failure"/>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dip"
				android:layout_gravity="center_horizontal"
				android:text="@string/wifi_checked"
				android:textSize="17sp"
				android:textColor="#646464"/>
		</LinearLayout>

		<Button android:id="@+id/btn_next"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="25dp"
			android:layout_gravity="center_horizontal"
			android:text="@string/next"
			android:textColor="@android:color/white"
			android:textSize="16sp"
			android:background="@drawable/selector_btn_green_bg"
			android:visibility="visible"/>

		<Button android:id="@+id/bt_open_wifi"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="20dp"
			android:layout_gravity="center_horizontal"
			android:text="@string/open_wifi"
			android:textColor="@android:color/white"
			android:background="@drawable/selector_btn_green_bg"
			android:layout_centerHorizontal="true"
			android:visibility="gone"/>
	</LinearLayout>
    
</LinearLayout>